karlserve package Changelog
===========================

Unreleased
----------

- Refactored the 'use_pgtextindex' script into the 'reindex_text' script which
  can convert between text index types in both directions.  (LP #771956)

- Does not use the pretty error page middleware in debug mode.  This allows
  the Paste interactive debugger to be used.

1.1 (2011-05-17)
----------------

- Removed zodb sync script.  This change will require rerunning buildout.

- Changed the 'hardwired' configuration into default configuration which can
  be overridden more easily.

- KarlServe writes some configuration files out as temporary files to the
  filesystem.  Previously /tmp was used for this.  This was a tactical error,
  since most OS's regularly clean out /tmp after a while, which was breaking
  Karl.  Now these files are stored in var/tmp of the running KarlServe
  environment.

- Added ability to define a 'root' instance which can be served at '/'.  This
  can be useful in installations where only a single instance is configured.

- Added the 'create_mailin_trace' command to karlserve for configuring the
  mailin trace tool.  (LP #770428)

- Fixed bug where transaction was not being committed when updating feeds.
  (LP #782277)

1.0 (2011-04-28)
----------------

- Initial release.